# deric_rpc

./: README.md
deric_rpc/: CMakeLists.txt
deric_rpc/common/: component_public.h  config_interface.h  deric_debug.h  function_helper.h  function_traits.h  message_public.h  nocopyable.h
deric_rpc/config/: CMakeLists.txt
deric_rpc/config/include/: config_interface.h  rpc_config.h
deric_rpc/config/src/: rpc_config.cpp
deric_rpc/function/: function_helper.h  function_traits.h
deric_rpc/io/: CMakeLists.txt
deric_rpc/io/include/: io_connection_client_interface.h  io_interface.h  io_module.h  io_server_client_interface.h  tcp_io_connection.h  tcp_io_server.h  tcp_io_server_entry.h
deric_rpc/io/src/: io_module.cpp  tcp_io_connection.cpp  tcp_io_server.cpp  tcp_io_server_entry.cpp
deric_rpc/process/: CMakeLists.txt
deric_rpc/process/include/: deric_process.h  deric_process_entry.h
deric_rpc/process/src/: deric_process.cpp  deric_process_entry.cpp
deric_rpc/rpc/client/: CMakeLists.txt
deric_rpc/rpc/client/include/: client_interface.h  rpc_client_entry.h  rpc_client_impl.h
deric_rpc/rpc/client/src/: rpc_client_entry.cpp  rpc_client_impl.cpp
deric_rpc/rpc/common/: CMakeLists.txt
deric_rpc/rpc/common/include/: rpc_config.h  rpc_messages.h  rpc_serialer.h
deric_rpc/rpc/common/src/: rpc_config.cpp
deric_rpc/rpc/server/: CMakeLists.txt
deric_rpc/rpc/server/include/: rpc_function_executor.h  rpc_service_client_entry.h  rpc_service_entry.h  rpc_service_impl.h  service_client_entry_interface.h  service_interface.h
deric_rpc/rpc/server/src/: rpc_service_client_entry.cpp  rpc_service_entry.cpp  rpc_service_impl.cpp
deric_rpc/serial/: rpc_serialer.h
deric_rpc/task/: CMakeLists.txt
deric_rpc/task/include/: task_queue.h  thread_pool.h
deric_rpc/task/src/: thread_pool.cpp
example/client/: CMakeLists.txt  client.cpp  test_client.config
example/server/: CMakeLists.txt  server.cpp  test_server.config
example/server/api/: deric_test_service_api.h
test/rpc/: test_service_book
test/rpc/client/: CMakeLists.txt  client.cpp  test_client.config
test/rpc/server/: CMakeLists.txt  server.cpp  test_server.config
test/rpc/server/api/: deric_test_service_api.h
test/task/: CMakeLists.txt  test_task.cpp
